--- a/styles.css
+++ b/styles.css
@@ -13,27 +13,18 @@ body{
     background: linear-gradient(45deg, #00853e, #50c878);
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-family: 'Poppins', sans-serif;
     color: white;
+    align-items: center;
+    font-family: 'Poppins';
 }
 
 .card{
     width: 300px;
     height: 400px;
     background-color: #242628;
-    border-radius: 10px;
+    border-radius: 15px;
     text-align: center;
     overflow: hidden;
-    margin: 0 20px;
-}
-
-.card h2{
-    margin-top: 30px;
-}
-
-.card p{
-    color: var(--primary-color);
 }
 
 .card__img{
@@ -43,15 +34,15 @@ body{
     border-radius: 50%;
     margin: 0 auto;
     overflow: hidden;
-    transform: translateY(18px);
-    transition: 0.3s;
+    transform: translateY(20px);
+    transition: 0.4s;
 }
 
 .card__img:hover{
     width: 100%;
     height: 100%;
     border-radius: unset;
-    border: none;
+    border: unset;
     transform: unset;
 }
 
@@ -62,35 +53,43 @@ body{
     object-position: center;
 }
 
-.card__social{
-    margin: 25px 0;
+.card h2{
+    margin-top: 30px;
 }
 
-.card__social a{
-    color: white;
-    margin: 0 20px;
-    font-size: 20px;
-    transition: 0.4s;
-    text-decoration: none   ;
+.card p{
+    color: var(--primary-color);
+}
+
+.card__social{
+    margin: 20px 0;
 }
 
 .card__social a:hover{
     color: var(--primary-color);
 }
 
-.card button{
-    width: 150px;
-    border: 1px solid var(--primary-color);
-    outline: none;
-    background: transparent;
+.card__social a{
+    font-size: 20px;
     color: white;
-    font-weight: 600;
-    padding: 15px 20px;
-    border-radius: 10px;
+    text-decoration: none;
+    margin: 0 15px;
     transition: 0.5s;
-    cursor: pointer;
+}
+
+.card button{
+    color: white;
+    outline: none;
+    border: none;
+    border: 1px solid var(--primary-color);
+    background: transparent;
+    border-radius: 10px;
+    padding: 10px 25px;
+    font-weight: 600;
+    margin-top: 20px;
+    transition: 0.2s;
 }
 
 .card button:hover{
-    background: var(--primary-color);
+    background-color: var(--primary-color);
 }
